@@ -32,7 +32,7 @@ import com.nimbusds.jose.JWSAlgorithm;
  * 
  * @author Axel Nennker
  * @author Vladimir Dzhuvinov
- * @version $version$ (2012-10-09)
+ * @version $version$ (2013-03-21)
  */
 abstract class ECDSAProvider extends BaseJWSProvider {
 
@@ -47,7 +47,6 @@ abstract class ECDSAProvider extends BaseJWSProvider {
 	 * Initialises the supported algorithms.
 	 */
 	static {
-
 		Set<JWSAlgorithm> algs = new HashSet<JWSAlgorithm>();
 		algs.add(JWSAlgorithm.ES256);
 		algs.add(JWSAlgorithm.ES384);
@@ -64,6 +63,39 @@ abstract class ECDSAProvider extends BaseJWSProvider {
 	protected ECDSAProvider() {
 
 		super(SUPPORTED_ALGORITHMS);
+	}
+
+
+	/**
+	 * Gets the expected signature byte array length (R + S parts) for the
+	 * specified ECDSA algorithm.
+	 *
+	 * @param alg The JSON Web Algorithm (JWA). Must be supported and not
+	 *            {@code null}.
+	 *
+	 * @return The expected byte array length for the signature.
+	 *
+	 * @throws JOSEException If the algorithm is not supported.
+	 */
+	protected static int getSignatureByteArrayLength(final JWSAlgorithm alg)
+		throws JOSEException {
+
+		if (alg.equals(JWSAlgorithm.ES256)) {
+			
+			return 64;
+
+		} else if (alg.equals(JWSAlgorithm.ES384)) {
+
+			return 96;
+
+		} else if (alg.equals(JWSAlgorithm.ES512)) {
+
+			return 132;
+		
+		} else {
+
+			throw new JOSEException("Unsupported ECDSA algorithm, must be ES256, ES384 or ES512");
+		}
 	}
 
 
